[gd_scene load_steps=6 format=2]

[ext_resource path="res://Monsters/monster.gd" type="Script" id=1]
[ext_resource path="res://Images/gameMonster.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 167.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/monsterGaze/CollisionPolygon2D/Polygon2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.290196, 0.290196, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "search"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 4, 8.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 167.3, 14.6, 167.3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "zoomIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/monsterGaze/CollisionPolygon2D/Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.290196, 0.290196, 0.607843 ), Color( 0.545098, 0.290196, 0.290196, 1 ) ]
}

[node name="monster" type="Node2D"]
script = ExtResource( 1 )

[node name="monsterHead" type="Sprite" parent="."]
position = Vector2( 13, 273 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
rotation = 2.91994

[node name="monsterGaze" type="Area2D" parent="Node2D"]
rotation = -1.5708
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/monsterGaze"]
position = Vector2( 1.45594, -6.5483 )
polygon = PoolVector2Array( 0, 0, -100, 500, 0, 550, 100, 500 )

[node name="Polygon2D" type="Polygon2D" parent="Node2D/monsterGaze/CollisionPolygon2D"]
color = Color( 0.545098, 0.290196, 0.290196, 1 )
polygon = PoolVector2Array( 99.5481, 499.418, 0.741638, 549.869, -100.754, 499.553, -17.9179, 90.964, 16.9185, 94.9303 )

[node name="Timer" type="Timer" parent="Node2D/monsterGaze"]

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/search = SubResource( 2 )
anims/zoomIn = SubResource( 3 )

[connection signal="body_entered" from="Node2D/monsterGaze" to="." method="_on_monsterGaze_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
